<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:mobicart="http://schemas.android.com/apk/res/com.mobicart.renamed_package"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent">
  <com.mobicart.renamed_package.utils.MyCommonView
  android:id="@+id/Delivery_title_TV"
  style="@style/TitleFont"
  mobicart:ttf_name="Helvetica Neue Bold.ttf"
  android:layout_width="fill_parent"
  android:layout_height="30dip"
  android:layout_alignParentLeft="true"
  android:layout_below="@+id/myAccountcountry_TV"
  android:text="@string/Delivery_title"
  android:textColor="#000000"
  android:textSize="15sp"
  android:paddingLeft="12dip"
  android:paddingTop="5dip"
  android:paddingBottom="5dip"
  android:editable="true"
  android:focusable="true"
  />
  <com.mobicart.renamed_package.utils.MyCommonView
  android:id="@+id/Delivery_street_TV"
  style="@style/FormTextFont"
  mobicart:ttf_name="Helvetica Neue Bold.ttf"
  android:layout_below="@+id/Delivery_title_TV"
  android:layout_marginTop="14dip"
  android:paddingLeft="12dip"
  android:paddingTop="8dip"
  android:text="@string/Delivery_street"
  android:textColor="#000000"
  />
  <EditText
  android:id="@+id/Delivery_street_ET"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:layout_alignParentRight="true"
  android:layout_below="@+id/Delivery_title_TV"
  android:layout_toRightOf="@+id/Delivery_street_TV"
  android:layout_marginRight="22dip"
  android:text=""
  android:textSize="15sp"
  android:typeface="normal"
  android:inputType="textPostalAddress"
  android:layout_marginTop="13dip"
  android:singleLine="true"
  />
  <com.mobicart.renamed_package.utils.MyCommonView
  android:id="@+id/Delivery_city_TV"
  style="@style/FormTextFont"
  mobicart:ttf_name="Helvetica Neue Bold.ttf"
  android:layout_below="@+id/Delivery_street_TV"
  android:layout_marginTop="15dip"
  android:paddingLeft="12dip"
  android:paddingTop="8dip"
  android:text="@string/Delivery_city"
  android:textColor="#000000"
  />
  <EditText
  android:id="@+id/Delivery_city_ET"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:layout_alignParentRight="true"
  android:layout_below="@+id/Delivery_street_ET"
  android:layout_toRightOf="@+id/Delivery_city_TV"
  android:layout_marginRight="22dip"
  android:text="" 
  android:textSize="15sp"
  android:typeface="normal"
  android:inputType="text"
  android:singleLine="true"
  />
  <com.mobicart.renamed_package.utils.MyCommonView
  android:id="@+id/Delivery_zip_TV"
  style="@style/FormTextFont"
  mobicart:ttf_name="Helvetica Neue Bold.ttf"
  android:layout_below="@+id/Delivery_city_TV"
  android:layout_marginTop="15dip"
  android:paddingLeft="13dip"
  android:paddingTop="8dip"
  android:text="@string/Delivery_zip"
  android:textColor="#000000"
  />
  <EditText
  android:id="@+id/Delivery_zip_ET"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:layout_alignParentRight="true"
  android:layout_below="@+id/Delivery_city_ET"
  android:layout_toRightOf="@+id/Delivery_zip_TV"
  android:layout_marginRight="22dip"
  android:text=""
  android:textSize="15sp"
  android:inputType="textPostalAddress"
  android:typeface="normal"
  android:singleLine="true"
  />
  <com.mobicart.renamed_package.utils.MyCommonView
  android:id="@+id/Delivery_country_TV"
  style="@style/FormTextFont"
  mobicart:ttf_name="Helvetica Neue Bold.ttf"
  android:layout_below="@+id/Delivery_zip_TV"
  android:layout_marginTop="10dip"
  android:paddingLeft="12dip"
  android:paddingTop="8dip"
  android:text="@string/Delivery_country"
  android:textColor="#000000"
  />
  <ScrollView
  android:id="@+id/Delivery_country_SV"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:layout_alignParentRight="true"
  android:layout_below="@+id/Delivery_zip_ET"
  android:layout_toRightOf="@+id/Delivery_country_TV"
  android:layout_marginRight="22dip"
  />
 <com.mobicart.renamed_package.utils.MyCommonView
  android:id="@+id/Delivery_state_TV"
  style="@style/FormTextFont"
  mobicart:ttf_name="Helvetica Neue Bold.ttf"
  android:layout_below="@+id/Delivery_country_TV"
  android:layout_marginTop="4dip"
  android:paddingLeft="12dip"
  android:paddingTop="8dip"
  android:paddingBottom="8dip"
  android:text="@string/Delivery_state"
  android:textColor="#000000"
  />
  <ScrollView
  android:id="@+id/Delivery_state_SV"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:layout_alignParentRight="true"
  android:layout_below="@+id/Delivery_country_SV"
  android:layout_toRightOf="@+id/Delivery_state_TV"
  android:layout_marginRight="22dip"
  android:layout_marginTop="5dip"
  />
 <!--  <com.mobicart.renamed_package.utils.MyCommonView
  android:id="@+id/Delivery_zip_TV"
  style="@style/FormTextFont"
  mobicart:ttf_name="Helvetica Neue Bold.ttf"
  android:layout_below="@+id/Delivery_state_TV"
  android:layout_marginTop="9dip"
  android:paddingLeft="13dip"
  android:paddingTop="8dip"
  android:text="@string/Delivery_zip"
  android:textColor="#000000"
  />
  <EditText
  android:id="@+id/Delivery_zip_ET"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:layout_alignParentRight="true"
  android:layout_below="@+id/Delivery_state_SV"
  android:layout_toRightOf="@+id/Delivery_zip_TV"
  android:layout_marginRight="22dip"
  android:layout_marginTop="8dip"
  android:text=""
  android:textSize="15sp"
  android:inputType="textPostalAddress"
  android:typeface="normal"
  android:singleLine="true"
  /> -->
  />
</RelativeLayout>