<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:mobicart="http://schemas.android.com/apk/res/com.mobicart.renamed_package"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  >
  <ScrollView
  android:layout_height="fill_parent"
  android:layout_width="fill_parent"
  android:fillViewport="true"
  android:fadingEdge="none" >
  <RelativeLayout
  android:id="@+id/RL1"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@drawable/account_bg"
  >
  <com.mobicart.renamed_package.utils.MyCommonView
  android:id="@+id/myAccount_title_TV"
  style="@style/TitleFont"
  mobicart:ttf_name="Helvetica Neue Bold.ttf"
  android:layout_width="fill_parent"
  android:layout_height="30dip"
  android:layout_alignParentLeft="true"
  android:text="@string/myAccount_title"
  android:textSize="15sp"
  android:textColor="#ffffff"
  android:paddingLeft="12dip"
  android:paddingTop="5dip"
  android:paddingBottom="5dip"
  android:background="@drawable/bar_image"
  />
  <com.mobicart.renamed_package.utils.MyCommonView
  android:id="@+id/myAccountemail_TV"
  style="@style/FormTextFont"
  mobicart:ttf_name="Helvetica Neue Bold.ttf"
  android:layout_below="@+id/myAccount_title_TV"
  android:layout_marginTop="10dip"
  android:paddingLeft="12dip"
  android:paddingTop="8dip"
  android:paddingBottom="8dip"
  android:gravity="center_vertical"
  android:text="@string/myAccountemail"
  android:textColor="#000000"
  />
  <EditText
  android:id="@+id/myAccountemail_ET"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:layout_alignParentRight="true"
  android:layout_below="@+id/myAccount_title_TV"
  android:layout_toRightOf="@id/myAccountemail_TV"
  android:layout_marginRight="22dip"
  android:layout_marginTop="7dip"
  android:text="Admin@mobicart.com"
  android:textSize="15sp"
  android:typeface="normal"
  android:inputType="textEmailAddress"
  android:singleLine="true"
  />
  <com.mobicart.renamed_package.utils.MyCommonView
  android:id="@+id/myAccountstreet_TV"
  style="@style/FormTextFont"
  mobicart:ttf_name="Helvetica Neue Bold.ttf"
  android:layout_below="@id/myAccountemail_TV"
 android:layout_marginTop="13dip"
  android:gravity="center_vertical"
  android:paddingLeft="12dip"
  android:paddingTop="8dip"
  android:paddingBottom="8dip"
  android:text="@string/myAccountstreet"
  android:textColor="#000000"
  />
  <EditText
  android:id="@+id/myAccountstreet_ET"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:layout_alignParentRight="true"
  android:layout_below="@id/myAccountemail_ET"
  android:layout_toRightOf="@id/myAccountstreet_TV"
  android:layout_marginRight="22dip"
  android:text="51 simth"
  android:textSize="15sp"
  android:inputType="textPostalAddress"
  android:singleLine="true"
  />
  <com.mobicart.renamed_package.utils.MyCommonView
  android:id="@+id/myAccountcity_TV"
  style="@style/FormTextFont"
  mobicart:ttf_name="Helvetica Neue Bold.ttf"
  android:layout_below="@id/myAccountstreet_TV"
  android:layout_marginTop="12dip"
  android:paddingLeft="12dip"
  android:paddingTop="8dip"
  android:paddingBottom="8dip"
  android:gravity="center_vertical"
  android:text="@string/myAccountcity"
  android:textColor="#000000"
  />
  <EditText
  android:id="@+id/myAccountcity_ET"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:layout_alignParentRight="true"
  android:layout_below="@id/myAccountstreet_ET"
  android:layout_toRightOf="@id/myAccountcity_TV"
  android:layout_marginRight="22dip"
  android:text="London"
  android:textSize="15sp"
  android:typeface="normal"
  android:inputType="text"
  android:singleLine="true"
  />
  <com.mobicart.renamed_package.utils.MyCommonView
  android:id="@+id/myAccountZip_TV"
  style="@style/FormTextFont"
  mobicart:ttf_name="Helvetica Neue Bold.ttf"
  android:layout_below="@id/myAccountcity_TV"
  android:layout_marginTop="12dip"
  android:paddingLeft="12dip"
  android:paddingTop="8dip"
  android:paddingBottom="8dip"
  android:text="@string/myAccountzip"
  android:textColor="#000000"
  />
  <EditText
  android:id="@+id/myAccountZip_ET"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:layout_alignParentRight="true"
  android:layout_below="@id/myAccountcity_ET"
  android:layout_toRightOf="@id/myAccountZip_TV"
  android:layout_marginRight="22dip"
  android:text="UK"
  android:textSize="15sp"
  android:typeface="normal"
  android:singleLine="true"
 />
  <com.mobicart.renamed_package.utils.MyCommonView
  android:id="@+id/myAccountCountry_TV"
  style="@style/FormTextFont"
  mobicart:ttf_name="Helvetica Neue Bold.ttf"
  android:layout_below="@+id/myAccountZip_TV"
  android:layout_marginTop="8dip"
  android:paddingLeft="12dip"
  android:gravity="center_vertical"
  android:paddingTop="8dip"
  android:paddingBottom="8dip"
  android:text="@string/myAccountcountry"
  android:textColor="#000000"
  />
  <ScrollView
  android:id="@+id/myAccountCountry_SV"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:layout_below="@+id/myAccountZip_ET"
  android:layout_toRightOf="@id/myAccountCountry_TV"
  android:layout_alignParentRight="true"
  android:layout_marginRight="22dip"
  android:layout_marginTop="0dip"
  />
 <com.mobicart.renamed_package.utils.MyCommonView
  android:id="@+id/myAccountState_TV"
  style="@style/FormTextFont"
  mobicart:ttf_name="Helvetica Neue Bold.ttf"
  android:layout_below="@id/myAccountCountry_TV"
  android:layout_marginTop="8dip"
  android:paddingLeft="12dip"
  android:paddingTop="8dip"
  android:paddingBottom="8dip"
  android:text="@string/myAccountstate"
  android:textColor="#000000"
  android:gravity="center_vertical"
  />
  <ScrollView
  android:id="@+id/myAccountState_SV"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:layout_below="@id/myAccountCountry_SV"
  android:layout_toRightOf="@id/myAccountState_TV"
  android:layout_alignParentRight="true"
  android:layout_marginRight="22dip"
  android:layout_marginTop="5dip"
  />
  <!-- <com.mobicart.renamed_package.utils.MyCommonView
  android:id="@+id/myAccountZip_TV"
  style="@style/FormTextFont"
  mobicart:ttf_name="Helvetica Neue Bold.ttf"
  android:layout_below="@id/myAccountState_TV"
  android:layout_marginTop="10dip"
  android:paddingLeft="12dip"
  android:paddingTop="8dip"
  android:paddingBottom="8dip"
  android:text="@string/myAccountzip"
  android:textColor="#000000"
  />
  <EditText
  android:id="@+id/myAccountZip_ET"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:layout_alignParentRight="true"
  android:layout_below="@id/myAccountState_SV"
  android:layout_toRightOf="@id/myAccountZip_TV"
  android:layout_marginRight="22dip"
  android:layout_marginTop="8dip"
  android:layout_marginBottom="12dp"
  android:text="UK"
  android:textSize="15sp"
  android:typeface="normal"
  android:singleLine="true"
 /> -->
  <RelativeLayout
  android:id="@+id/delivery_footer_layout"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:layout_below="@id/myAccountState_TV"
  android:visibility="visible"
  >
  <include android:id="@+id/account_footer" layout="@layout/deliverydetail_layout" android:layout_width="fill_parent" android:layout_height="wrap_content" 
     android:layout_marginTop="20dp"
      />
  </RelativeLayout>
  <com.mobicart.renamed_package.utils.MyCommonView
  android:id="@+id/myAccountEdit_Btn"
  style="@style/FormTextFont"
  mobicart:ttf_name="Helvetica Neue Bold.ttf"
  android:layout_below="@id/delivery_footer_layout"
  android:layout_toRightOf="@id/myAccountState_TV"
  android:layout_marginTop="10dip"
  android:layout_marginLeft="2dip"
  android:layout_marginRight="23dip"
  android:text="@string/myAccountEdit"
  android:textSize="15sp"
  android:gravity="center"
  android:textColor="#ffffff"
  android:layout_width="fill_parent"
  android:layout_height="40dip"
  android:background="@drawable/rounded_button"/>
  <TextView
  android:id="@+id/myAccountBottom_Btn"
  android:layout_width="fill_parent"
  android:layout_height="10dip"
  android:layout_below="@+id/myAccountEdit_Btn"
  />
  </RelativeLayout>
  </ScrollView>
</RelativeLayout>