<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout
  xmlns:android="http://schemas.android.com/apk/res/android"
  xmlns:mobicart="http://schemas.android.com/apk/res/com.mobicart.renamed_package"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@drawable/account_bg"
  >
  <com.mobicart.renamed_package.utils.MyCommonView
  android:id="@+id/postReview_title_TV"
  style="@style/TitleFont"
  mobicart:ttf_name="Helvetica Neue Bold.ttf"
  android:layout_alignParentTop="true"
  android:background="@drawable/bar_image"
  android:paddingLeft="12dip"
  android:paddingTop="6dip"
  android:text="@string/postReview_title"
  android:textColor="#ffffff"
  />
  <RelativeLayout
  android:id="@+id/postReview_title_RL"
  android:layout_below="@id/postReview_title_TV"
  android:layout_width="fill_parent"
  android:layout_height="40dip"
  android:background="@drawable/bar_image"
  >
  <com.mobicart.renamed_package.utils.MyCommonView
  android:id="@+id/postReview_title_rateIt_TV"
  style="@style/TitleFont"
  mobicart:ttf_name="Helvetica Neue Bold.ttf"
  android:layout_width="wrap_content"
  android:layout_height="wrap_content"
  android:layout_centerVertical="true"
  android:text="@string/postReview_title_rateIt"
  android:textColor="#ffffff"
  android:paddingLeft="12dip"
  />
  <RatingBar
  android:id="@+id/postReview_Ratingbar"
  android:layout_height="19dip"
  android:layout_width="wrap_content"
  android:layout_marginLeft="12dip"
  android:layout_marginTop="2dip"
  android:layout_centerVertical="true"
  android:layout_toRightOf="@id/postReview_title_rateIt_TV"
  style="@style/Rating_Bar"
  />
  <com.mobicart.renamed_package.utils.MyCommonView
  android:id="@+id/postReview_Btn"
  style="@style/TextFontBtn"
  mobicart:ttf_name="Helvetica Neue Bold.ttf"
  android:layout_alignParentRight="true"
  android:layout_centerVertical="true"
  android:layout_marginRight="5dip"
  android:padding="2dip"
  android:paddingRight="4dip"
  android:paddingLeft="4dip"
  android:textSize="12sp"
  android:text="@string/postReview_Btn"
  android:textColor="#ffffff"
  android:maxLines="1"
  android:maxLength="15"
  android:ellipsize="end"
  android:background="@drawable/review_btn_selector"
  />
 </RelativeLayout>
 <RelativeLayout
  android:id="@+id/postReview_RL"
  android:layout_below="@id/postReview_title_RL"
  android:layout_width="fill_parent"
  android:layout_height="fill_parent"
  android:background="@drawable/gradient">
  <EditText
  android:id="@+id/postReview_ET"
  android:layout_width="fill_parent"
  android:layout_height="103dip"
  android:layout_marginLeft="10dip"
  android:layout_marginTop="3dip"
  android:layout_marginRight="9dip"
  android:layout_marginBottom="10dip"
  android:gravity="top"
  android:hint=""
  android:imeOptions="actionDone"
  android:maxLength="150"
  />
  <ImageView
  android:id="@+id/postReview_IV"
  android:layout_alignParentBottom="true"
  android:layout_width="fill_parent"
  android:layout_height="wrap_content"
  android:background="#000000"
  />
</RelativeLayout>
</RelativeLayout>